<resources>
    <string name="app_name">IRun..</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="sex_info">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- Nav Menu Strings -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_icon_name">IRun</string>
    <string name="menu_run_command">Start Running</string>
    <string name="menu_history">View History</string>
    <string name="menu_about">About</string>
    <string name="menu_warmup">Exercises</string>
    <string name="menu_communicate_title">Communicate</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_message">Messages</string>
    <string name="menu_logout">Log Out</string>


    <!-- Activity & Fragment Titles -->
    <string name="run_fragment_title">RUN</string>
    <string name="history_fragment_title">HISTORY</string>
    <string name="about_fragment_title">ABOUT</string>
    <string name="settings_fragment_title">SETTINGS</string>
    <string name="messages_fragment_title">Messages</string>
    <string name="warmup_fragment_title">EXERCISES</string>

    <!-- Button Texts -->
    <string name="run_fragment_start_button">START</string>
    <string name="action_activity_start_button">START</string>
    <string name="action_activity_pause_button">PAUSE</string>
    <string name="action_activity_restart_button">RESTART</string>

    <!-- History Texts -->
    <string name="history_fragment_avg_speed">Avg Speed</string>
    <string name="history_fragment_total_distance">Total Distance</string>
    <string name="history_fragment_total_time">Total Time</string>
    <string name="history_fragment_activity_date">Activity Date</string>
    <string name="last_run_result_fragment_title">Run Summary</string>

    <!-- Mix -->
    <string name="action_activity_kilometer">KILOMETER</string>
    <string name="action_activity_meter">METER</string>

    <!-- Dialog Texts -->
    <string name="action_activity_cancel_dialog">Cancelling activity, no result will be stored</string>
    <string name="action_activity_cancel">Cancel</string>
    <string name="action_activity_accept">Accept</string>
    <string name="title_activity_info_insert">InfoInsertActivity</string>


</resources>
