<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_run"
            android:icon="@drawable/ic_runer"
            android:title="@string/menu_run_command" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history2"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/ic_stretching_exercises"
            android:title="@string/warmup_fragment_title"/>

    </group>

    <item android:title="@string/menu_communicate_title">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_msg"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_message" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
